# reader

./: .gitignore  pyproject.toml
src/: __main__.py
src/db/: manager.py
src/readers/: book_parser.py  epub_parser.py  fb2_parser.py
